@@ -13,6 +13,7 @@ Date: 00. 00. 0000
     - Removed the dedicated 'toggle recipe'-button and integrated its core functionality into the recipe button itself
     - Re-architected the way button clicks are handled, making tutorial tooltips both more accurate and prettier
     - Removed mod interactions with FNEI and WIIRUF, meaning alt-clicking items or recipes will now only open them in Recipe Book, if possible
+    - Moved the utility dialog button to the production toolbar
     - Improved consistency and visual appeal of various tooltips
     - Added a ko-fi patronage 'link' to the preferences pane
     - Updated to flib 0.9.1
